--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,11 @@ plugins {
     id 'signing'
     id 'nebula.release' version '15.3.1'
     id 'jacoco'
-    id 'com.github.kt3k.coveralls' version '2.12.0'
     id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
+    id 'net.wooga.snyk' version '0.10.0'
+    id "net.wooga.snyk-wdk-java" version "0.3.0"
+    id "net.wooga.cve-dependency-resolution" version "0.3.0"
 }
-
 
 group "com.wooga.xcodebuild"
 
@@ -37,9 +38,9 @@ if (cliTasks.contains("rc")) {
 }
 
 dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:2.4.15'
-    implementation 'org.apache.commons:commons-io:[1.3.2,2)'
-    testImplementation 'org.spockframework:spock-core:1.2-groovy-2.4'
+    implementation 'org.codehaus.groovy:groovy-all:2.5.16'
+    implementation 'commons-io:commons-io:[2.7,3)'
+    testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'com.github.stefanbirkner:system-rules:[1.18,2)'
     testImplementation 'net.bytebuddy:byte-buddy:[1.10.19,2)'
 }
